inference works for L2

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "295cf79c-b3db-48d5-94e0-26832de24979",
    "metadata": {},
    "outputs": [
@@ -92,19 +92,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [01:47<00:00, 53.86s/it]\n",
-      "\n",
-      "No chat template is defined for this tokenizer - using the default template for the LlamaTokenizerFast class. If the default is not appropriate for your model, please set `tokenizer.chat_template` to an appropriate template. See https://huggingface.co/docs/transformers/main/chat_templating for more information.\n",
-      "\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [01:27<00:00, 43.52s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<s> [INST] What is your favourite condiment? [/INST]\n",
-      "\n",
-      "I'm not sure if this is a condiment, but I love ketchup. I'm not sure why, but I love it. I'm not a big fan of mustard, but I do like it on hot dogs. I'm not a big fan of mayonnaise, but I do like it on sandwiches. I'm not a big fan of relish, but I do like it on hot dogs. I'm not a big fan of pickles, but I do like them on sandwiches. I'm not a big fan of olives, but I do like them on pizza. I'm not a big fan of cheese, but I do like it on pizza. I'm not a big fan of tomatoes, but I do like them on pizza. I'm not a big fan of onions, but I do like them on pizza. I'm not a big fan of peppers, but I do like them on pizza. I'm not a big fan of mushrooms, but I do like them on pizza. I'm not a big fan of sausage, but I do like it on pizza. I'm not a big fan of pepperoni, but I do like it on pizza. I'm not a big fan of anchovies, but I do like them on pizza. I'm not a big fan of bacon, but I do like it on pizza. I'm not a big fan of ham, but I do like it on pizza. I'm not a big fan of chicken, but I do like it on pizza. I'm not a big fan of beef, but I do like it on pizza. I'm not a big fan of pork, but I do like it on pizza. I'm not a big fan of lamb, but I do like it on pizza. I'm not a big fan of veal, but I do like it on pizza. I'm not a big fan of fish, but I do like it on pizza. I'm not a big fan of shrimp, but I do like it on pizza. I'm not a big fan of lobster, but I do like it on pizza. I'm not a big fan of crab, but I do like it on pizza. I'm not a big fan of scallops, but I do like them on pizza. I'm not a big fan of oysters, but I do like them on pizza. I'm not a big fan of clams, but I do like them on pizza. I'm not a big fan of mussels, but I do like them on pizza. I'm not a big fan of squid, but I do like it on pizza. I'm not a big fan of octopus, but I do like it on pizza. I'm not a big fan of shark, but I do like it on pizza. I'm not a big fan of whale, but I do like it on pizza. I'm not a big fan of dolphin, but I do like it on pizza. I'm not a big fan of seal, but I do like it on pizza. I'm not a big fan of penguin, but I do like it on pizza. I'm not a big fan of walrus, but I do like it on pizza. I'm not a big fan of hippopotamus, but I do like it on pizza. I'm not a big fan of rhino, but I do like it on pizza. I'm not a big fan of elephant, but I do like it on pizza. I'm not a big fan of giraffe, but I do like it on pizza. I'm not a big fan of zebra, but I do like it on pizza. I'm not a big fan of antelope, but I do like it on pizza. I'm not a big fan of gazelle, but I do like it on pizza. I'm not a big fan of deer, but I do like it on pizza. I'm not a big fan of elk, but I do like it on pizza. I'm not a big fan of moose, but I do like it on pizza. I'm not a big fan of caribou, but I do like it on pizza. I'm not a big fan of reindeer, but I do like it on pizza. I'm not a big fan of bison, but I do like it on pizza. I'm not a big fan of buffalo, but I do like it on pizza. I\n"
+      "<s> [INST] What is your favourite condiment? [/INST]  I'm just an AI, I don't have personal preferences or taste buds, but I can tell you about different types of condiments that people enjoy! Some popular condiments include:\n",
+      " everybody loves ketchup, mustard, and mayonnaise. Other popular condiments include hot sauce, ranch dressing, hummus, and soy sauce. Some people also enjoy more unique condiments like sriracha, tahini, or gochujang. Ultimately, the best condiment is the one that you enjoy the most, so feel free to experiment and find your favorite!</s>\n"
      ]
     }
    ],
@@ -112,10 +108,10 @@
     "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
     "import torch\n",
     "\n",
-    "model_name = \"mistralai/Mistral-7B-v0.1\"\n",
-    "# model_name = \"meta-llama/Llama-2-7b-chat-hf\"\n",
+    "# model_name = \"mistralai/Mistral-7B-v0.1\"\n",
+    "model_name = \"meta-llama/Llama-2-7b-chat-hf\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    \"mistralai/Mistral-7B-v0.1\", \n",
+    "    \"meta-llama/Llama-2-7b-chat-hf\", \n",
     "    padding_side=\"right\",\n",
     "    add_eos_token=True,\n",
     "    add_bos_token=True,\n",
@@ -151,25 +147,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "42475479-4008-4a60-85b2-4f55d9b3213f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4672979968"
+       "8529920"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Empty VRAM\n",
-    "del model_inputs\n",
-    "del inf_model\n",
+    "# del model\n",
+    "# del model_inputs\n",
+    "# del inf_model\n",
     "\n",
     "import gc\n",
     "gc.collect()\n",
@@ -181,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "ecbfc85f-ecfc-486c-a249-0c0a0870530f",
    "metadata": {},
    "outputs": [
@@ -189,7 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Jan 19 14:00:06 2024       \n",
+      "Mon Jan 22 07:36:57 2024       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 535.146.02             Driver Version: 535.146.02   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -198,7 +195,7 @@
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
       "|   0  NVIDIA A10G                    Off | 00000000:00:1E.0 Off |                    0 |\n",
-      "|  0%   38C    P0             190W / 300W |  15211MiB / 23028MiB |    100%      Default |\n",
+      "|  0%   26C    P0              56W / 300W |   9106MiB / 23028MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -229,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "ab2e1743-956f-435f-a2de-5da9f44ce018",
    "metadata": {},
    "outputs": [
@@ -237,24 +234,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mongjjbrandon\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [01:24<00:00, 42.38s/it]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# attach our trained QLora adapters to base model\n",
-    "base_model_name = \"mistralai/Mistral-7B-v0.1\"\n",
-    "# base_model_name = \"meta-llama/Llama-2-7b-chat-hf\"\n",
+    "# base_model_name = \"mistralai/Mistral-7B-v0.1\"\n",
+    "base_model_name = \"meta-llama/Llama-2-7b-chat-hf\"\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
@@ -276,34 +263,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "cffe8500-7f5f-4fa9-8718-a855ca3e1d34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/ubuntu/ft/wandb/run-20240122_073015-3e0lg78i</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/ongjjbrandon/ft-ft/runs/3e0lg78i' target=\"_blank\">expert-universe-1</a></strong> to <a href='https://wandb.ai/ongjjbrandon/ft-ft' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/ongjjbrandon/ft-ft' target=\"_blank\">https://wandb.ai/ongjjbrandon/ft-ft</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/ongjjbrandon/ft-ft/runs/3e0lg78i' target=\"_blank\">https://wandb.ai/ongjjbrandon/ft-ft/runs/3e0lg78i</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Downloading large artifact model-ius0xksu:v0, 612.30MB. 8 files... \n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m:   8 of 8 files downloaded.  \n",
+      "Done. 0:0:1.7\n"
+     ]
+    }
+   ],
    "source": [
     "import wandb\n",
     "run = wandb.init()\n",
-    "artifact = run.use_artifact('ongjjbrandon/mistral-pjf-ft-v1/model-3uzptk49:v0', type='model')\n",
-    "artifact_dir = artifact.download()\n",
-    "run.finish()"
+    "artifact = run.use_artifact('ongjjbrandon/llama-7b-pjf-ft-v2/model-ius0xksu:v0', type='model')\n",
+    "artifact_dir = artifact.download()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "4583d705-de6b-4f30-851f-3708ba67c64f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = PeftModel.from_pretrained(inf_model, \"/content/artifacts/model-3uzptk49:v0\")"
+    "from peft import PeftModel\n",
+    "model = PeftModel.from_pretrained(inf_model, \"./artifacts/model-ius0xksu:v0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "c188193a-2938-4884-af75-fdc7873d473a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is a neural network??\n",
+      " Hinweis: This answer is a simplified explanation of a neural network and its components. For a more detailed understanding, I recommend checking out online resources or taking a course on machine learning.\n",
+      "\n",
+      "A neural network is a complex system of interconnected nodes (also called neurons) that work together to perform a specific task, such as image recognition, language translation, or decision-making. The nodes are arranged in layers, and each layer processes the input data in a different way.\n",
+      "\n",
+      "The\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = \"What is a neural network??\"\n",
     "\n",
@@ -319,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a3c2e640-8a5a-474a-9a63-f29706436910",
    "metadata": {},
    "outputs": [
@@ -328,17 +398,6 @@
      "output_type": "stream",
      "text": [
       "cuda\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'inf_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(device)\n\u001b[1;32m     13\u001b[0m model_input \u001b[38;5;241m=\u001b[39m tokenizer(prompt, return_tensors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m---> 15\u001b[0m _ \u001b[38;5;241m=\u001b[39m \u001b[43minf_model\u001b[49m\u001b[38;5;241m.\u001b[39meval()\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[1;32m     17\u001b[0m   out \u001b[38;5;241m=\u001b[39m inf_model\u001b[38;5;241m.\u001b[39mgenerate(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mmodel_input, max_new_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m216\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'inf_model' is not defined"
      ]
     }
    ],
@@ -371,7 +430,10 @@
    "id": "d6e6b461-7ad5-49e6-a239-712da07cea69",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# model.push_to_hub(new_model, use_temp_dir=False, token=hf_token)\n",
+    "# tokenizer.push_to_hub(new_model, use_temp_dir=False, token=hf_token)"
+   ]
   }
  ],
  "metadata": {
