--- a/inference.ipynb
+++ b/inference.ipynb
@@ -374,9 +374,9 @@
     "\n",
     "_ = model.eval()\n",
     "with torch.no_grad():\n",
-    "    out = model.generate(**model_input, max_new_tokens=100)\n",
+    "    out = peft_model.generate(**model_input, max_new_tokens=100)\n",
     "\n",
-    "print(tokenizer.decode(out[0], skip_special_tokens=True))"
+    "print(tokenizer.decode(out[0], skip_special_tokens=False))"
    ]
   },
   {
@@ -509,9 +509,9 @@
     "    print(device)\n",
     "    model_input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
     "    \n",
-    "    _ = inf_model.eval()\n",
+    "    _ = peft_model.eval()\n",
     "    with torch.no_grad():\n",
-    "      out = inf_model.generate(**model_input, max_new_tokens=216)\n",
+    "      out = peft_model.generate(**model_input, max_new_tokens=216)\n",
     "    \n",
     "    print(tokenizer.decode(out[0], skip_special_tokens=True))\n",
     "    print()"
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "d6e6b461-7ad5-49e6-a239-712da07cea69",
    "metadata": {},
    "outputs": [
@@ -527,8 +527,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "model.safetensors:  89%|████████▉ | 3.46G/3.87G [01:19<00:08, 46.4MB/s] "
+      "model.safetensors: 100%|██████████| 3.87G/3.87G [01:29<00:00, 43.4MB/s] \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/ogbrandt/llama2-7b-chat-pjf-instruction-tune/commit/ca1916e13da6832471b916005a8d28c405b2adfc', commit_message='Upload LlamaForCausalLM', commit_description='', oid='ca1916e13da6832471b916005a8d28c405b2adfc', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
