--- a/inference.ipynb
+++ b/inference.ipynb
@@ -656,17 +656,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "42475479-4008-4a60-85b2-4f55d9b3213f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5905577472"
+       "0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,6 +678,7 @@
     "# del base_model_reload\n",
     "# del peft_model\n",
     "# del model_input\n",
+    "# del load_model\n",
     "\n",
     "import gc\n",
     "gc.collect()\n",
@@ -689,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "ecbfc85f-ecfc-486c-a249-0c0a0870530f",
    "metadata": {},
    "outputs": [
@@ -697,7 +698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Jan 22 11:51:31 2024       \n",
+      "Mon Jan 22 12:56:04 2024       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 535.146.02             Driver Version: 535.146.02   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -706,7 +707,7 @@
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
       "|   0  NVIDIA A10G                    Off | 00000000:00:1E.0 Off |                    0 |\n",
-      "|  0%   19C    P8              15W / 300W |      0MiB / 23028MiB |      0%      Default |\n",
+      "|  0%   24C    P0              56W / 300W |    256MiB / 23028MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -715,7 +716,6 @@
       "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
       "|        ID   ID                                                             Usage      |\n",
       "|=======================================================================================|\n",
-      "|  No running processes found                                                           |\n",
       "+---------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -1289,26 +1289,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "d6e6b461-7ad5-49e6-a239-712da07cea69",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'inf_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m new_model_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmistral-7b-non-instruction-pjf-ft\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[43minf_model\u001b[49m\u001b[38;5;241m.\u001b[39mpush_to_hub(new_model_name)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# tokenizer.push_to_hub(new_model, use_temp_dir=False, token=hf_token)\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'inf_model' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c8a9ae2a51ef4908a7f99d853427b55b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "adapter_model.safetensors:   0%|          | 0.00/336M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/ogbrandt/mistral-7b-non-instruction-pjf-ft/commit/28d26c0d588aba1c9dd02a09aae1d77ebf3d4f29', commit_message='Upload model', commit_description='', oid='28d26c0d588aba1c9dd02a09aae1d77ebf3d4f29', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "new_model_name = \"mistral-7b-non-instruction-pjf-ft\"\n",
-    "inf_model.push_to_hub(new_model_name)\n",
+    "peft_model.push_to_hub(new_model_name)\n",
     "# tokenizer.push_to_hub(new_model, use_temp_dir=False, token=hf_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d832fc99-1f47-4ff1-ba16-8175b8875841",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m model\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# torch.cuda.empty_cache()\u001b[39;00m\n\u001b[1;32m      3\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnvidia-smi\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "del load_model\n",
+    "# torch.cuda.empty_cache()\n",
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5dca2378-a6d7-4d22-95c0-725a1e577133",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9fc02524436c4c0aa942bd39ed075ae0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Load model directly\n",
+    "from transformers import AutoModelForCausalLM\n",
+    "import torch\n",
+    "# remote_model = AutoModel.from_pretrained(\"ogbrandt/mistral7b-pjf-ft-v0\")\n",
+    "\n",
+    "# Reload model in FP16 and merge it with LoRA weights\n",
+    "base_model = \"mistralai/Mistral-7B-v0.1\"\n",
+    "# base_model = \"meta-llama/Llama-2-7b-chat-hf\"\n",
+    "# adapter_model = \"llama-2-7b-chat-pjf\"\n",
+    "adapter_model = \"ogbrandt/mistral7b-pjf-ft-v0\"\n",
+    "\n",
+    "load_model = AutoModelForCausalLM.from_pretrained(\n",
+    "    base_model,\n",
+    "    low_cpu_mem_usage=True,\n",
+    "    return_dict=True,\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    "    device_map={\"\": 0},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4b540463-cf11-49d3-82ca-d1719bf2c1d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "53e60607dac544069d43d01f4a63ba01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "adapter_model.safetensors:   0%|          | 0.00/83.9M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from peft import PeftModel\n",
+    "\n",
+    "model = PeftModel.from_pretrained(load_model, adapter_model)\n",
+    "# model = model.merge_and_unload()\n",
+    "\n",
+    "# Reload tokenizer to save it\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(base_model, trust_remote_code=True)\n",
+    "# tokenizer.add_special_tokens({'pad_token': '[PAD]'})\n",
+    "# tokenizer.pad_token = tokenizer.eos_token\n",
+    "# tokenizer.padding_side = \"right\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "14640367-8297-418e-8bc0-ba9e64699be0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
+    "# Reload tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(base_model, trust_remote_code=True)\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "tokenizer.padding_side = \"left\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bffd50be-aad5-4871-92c0-8527507e4d93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<s> are barefoot shoes useful?\n",
+      "What are the benefits of barefoot shoes?\n",
+      "Barefoot shoes are designed to mimic the natural movement of the foot and provide a more natural experience for the wearer. They are often made with a thin sole and a wide toe box, which allows the foot to move more freely and naturally. Barefoot shoes can help improve balance, strengthen the foot muscles, and reduce the risk of injury. They can also help improve posture and reduce the risk of developing foot problems such as\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"are barefoot shoes useful?\"\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model_input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "\n",
+    "_ = model.eval()\n",
+    "with torch.no_grad():\n",
+    "    out = model.generate(**model_input, max_new_tokens=100)\n",
+    "\n",
+    "print(tokenizer.decode(out[0], skip_special_tokens=False))"
    ]
   },
   {
