--- a/inference.ipynb
+++ b/inference.ipynb
@@ -656,17 +656,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "42475479-4008-4a60-85b2-4f55d9b3213f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "15240685568"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,6 +679,7 @@
     "# del peft_model\n",
     "# del model_input\n",
     "# del load_model\n",
+    "# del model\n",
     "\n",
     "import gc\n",
     "gc.collect()\n",
@@ -690,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "ecbfc85f-ecfc-486c-a249-0c0a0870530f",
    "metadata": {},
    "outputs": [
@@ -698,7 +699,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Jan 22 12:56:04 2024       \n",
+      "Mon Jan 22 13:04:55 2024       \n",
       "+---------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 535.146.02             Driver Version: 535.146.02   CUDA Version: 12.2     |\n",
       "|-----------------------------------------+----------------------+----------------------+\n",
@@ -707,7 +708,7 @@
       "|                                         |                      |               MIG M. |\n",
       "|=========================================+======================+======================|\n",
       "|   0  NVIDIA A10G                    Off | 00000000:00:1E.0 Off |                    0 |\n",
-      "|  0%   24C    P0              56W / 300W |    256MiB / 23028MiB |      0%      Default |\n",
+      "|  0%   25C    P0              56W / 300W |  15068MiB / 23028MiB |      0%      Default |\n",
       "|                                         |                      |                  N/A |\n",
       "+-----------------------------------------+----------------------+----------------------+\n",
       "                                                                                         \n",
@@ -717,6 +718,16 @@
       "|        ID   ID                                                             Usage      |\n",
       "|=======================================================================================|\n",
       "+---------------------------------------------------------------------------------------+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
      ]
     }
    ],
@@ -1350,14 +1361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "5dca2378-a6d7-4d22-95c0-725a1e577133",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fc02524436c4c0aa942bd39ed075ae0",
+       "model_id": "c2ffa0932e574d0c89d312c2cd2e60c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1378,8 +1389,6 @@
     "# Reload model in FP16 and merge it with LoRA weights\n",
     "base_model = \"mistralai/Mistral-7B-v0.1\"\n",
     "# base_model = \"meta-llama/Llama-2-7b-chat-hf\"\n",
-    "# adapter_model = \"llama-2-7b-chat-pjf\"\n",
-    "adapter_model = \"ogbrandt/mistral7b-pjf-ft-v0\"\n",
     "\n",
     "load_model = AutoModelForCausalLM.from_pretrained(\n",
     "    base_model,\n",
@@ -1392,41 +1401,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "4b540463-cf11-49d3-82ca-d1719bf2c1d4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53e60607dac544069d43d01f4a63ba01",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "adapter_model.safetensors:   0%|          | 0.00/83.9M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from peft import PeftModel\n",
     "\n",
+    "# adapter_model = \"llama-2-7b-chat-pjf\"\n",
+    "adapter_model = \"ogbrandt/mistral-7b-non-instruction-pjf-ft\"\n",
     "model = PeftModel.from_pretrained(load_model, adapter_model)\n",
-    "# model = model.merge_and_unload()\n",
-    "\n",
-    "# Reload tokenizer to save it\n",
-    "# tokenizer = AutoTokenizer.from_pretrained(base_model, trust_remote_code=True)\n",
-    "# tokenizer.add_special_tokens({'pad_token': '[PAD]'})\n",
-    "# tokenizer.pad_token = tokenizer.eos_token\n",
-    "# tokenizer.padding_side = \"right\""
+    "# model = model.merge_and_unload()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "14640367-8297-418e-8bc0-ba9e64699be0",
    "metadata": {},
    "outputs": [],
@@ -1435,12 +1425,12 @@
     "# Reload tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(base_model, trust_remote_code=True)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
-    "tokenizer.padding_side = \"left\""
+    "tokenizer.padding_side = \"right\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "bffd50be-aad5-4871-92c0-8527507e4d93",
    "metadata": {},
    "outputs": [
@@ -1455,14 +1445,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<s> are barefoot shoes useful?\n",
-      "What are the benefits of barefoot shoes?\n",
-      "Barefoot shoes are designed to mimic the natural movement of the foot and provide a more natural experience for the wearer. They are often made with a thin sole and a wide toe box, which allows the foot to move more freely and naturally. Barefoot shoes can help improve balance, strengthen the foot muscles, and reduce the risk of injury. They can also help improve posture and reduce the risk of developing foot problems such as\n"
+      "<s> best exercises to increase vertical jump for dunking?\n",
+      "What are the best exercises to increase vertical jump for dunking\n",
+      "\n",
+      "The best exercises to increase vertical jump for dunking\n",
+      "\n",
+      "The best exercises to increase vertical jump for dunk are those that focus on building explosive power and agility. These include plyometric exercises such as box jumps, bounding, and lateral bounds. Additionally, exercises that target the hip flexors, such as the standing hip flexor stretch and the standing hip flexor march, can also\n"
      ]
     }
    ],
    "source": [
-    "prompt = \"are barefoot shoes useful?\"\n",
+    "prompt = \"best exercises to increase vertical jump for dunking?\"\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "model_input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
@@ -1476,28 +1469,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c747858d-3929-4ba0-bb38-19f9fbae882d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clear the memory footprint\n",
-    "del model, trainer\n",
-    "torch.cuda.empty_cache()\n",
+    "# # Clear the memory footprint\n",
+    "# del model, trainer\n",
+    "# torch.cuda.empty_cache()\n",
     "\n",
-    "# Reload the base model\n",
-    "base_model_reload = AutoModelForCausalLM.from_pretrained(\n",
-    "    base_model, low_cpu_mem_usage=True,\n",
-    "    return_dict=True,torch_dtype=torch.bfloat16,\n",
-    "    device_map= {\"\": 0})\n",
-    "model = PeftModel.from_pretrained(base_model_reload, new_model_name)\n",
-    "model = model.merge_and_unload()\n",
+    "# # Reload the base model\n",
+    "# base_model_reload = AutoModelForCausalLM.from_pretrained(\n",
+    "#     base_model, low_cpu_mem_usage=True,\n",
+    "#     return_dict=True,torch_dtype=torch.bfloat16,\n",
+    "#     device_map= {\"\": 0})\n",
+    "# model = PeftModel.from_pretrained(base_model_reload, new_model_name)\n",
+    "# model = model.merge_and_unload()\n",
     "\n",
-    "# Reload tokenizer\n",
-    "tokenizer = AutoTokenizer.from_pretrained(base_model, trust_remote_code=True)\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "tokenizer.padding_side = \"right\""
+    "# # Reload tokenizer\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(base_model, trust_remote_code=True)\n",
+    "# tokenizer.pad_token = tokenizer.eos_token\n",
+    "# tokenizer.padding_side = \"right\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bab8c6a1-21fa-4c15-ab80-9c61d1c062cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
