--- a/inference.ipynb
+++ b/inference.ipynb
@@ -1375,7 +1375,22 @@
    "id": "3b77f586-05b4-4eff-97a3-331e6b75eaa0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def stream(user_prompt):\n",
+    "    runtimeFlag = \"cuda:0\"\n",
+    "    # system_prompt = 'The conversation between Human and AI named PaulGPT\\n'\n",
+    "    # B_INST, E_INST = \"[INST]\", \"[/INST]\"\n",
+    "    B_INST, E_INST = \"<|im_start|>\", \"<|im_end|>\"\n",
+    "\n",
+    "    # prompt = f\"{system_prompt}{B_INST}{user_prompt.strip()}\\n{E_INST}\"\n",
+    "    prompt = f\"{B_INST} {user_prompt.strip()} {E_INST}\"\n",
+    "\n",
+    "    inputs = tokenizer([prompt], return_tensors=\"pt\").to(runtimeFlag)\n",
+    "\n",
+    "    streamer = TextStreamer(tokenizer, skip_prompt=True, skip_special_tokens=False)\n",
+    "\n",
+    "    _ = merged_model.generate(**inputs, streamer=streamer, max_new_tokens=256)"
+   ]
   }
  ],
  "metadata": {
